# scratchs

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.cursor/rule/: baseline.mdc
IaaS/terraform/install/: apache.sh  ubuntu.sh
Python/install/pyenv/: codespace.sh
Python/librarys/loguru/: test.ipynb
Python/librarys/sqlalchemy/mysql-connector/: pyproject.toml
Python/librarys/sqlalchemy/mysql-connector/src/: scratch.ipynb
api-test/BlockSDK/: node_test.ipynb  scratch.ipynb
api-test/KAS/20240307/: get_account_nfts.py  scratch.ipynb
api-test/infura/: scratch_20231204.ipynb
api-test/reservoir/: api_test.ipynb
api-test/reservoir/20231026/: api_test.ipynb
api-test/reservoir/20231204/: api-test.ipynb
api-test/reservoir/20240614/: scratch.ipynb
api/blockchain/BlockSDK/: scratch.ipynb
api/blockchain/quicknode/: scratch.ipynb
api/coupang/coupang-wings/: vendor.py
api/data-go-kr/한국천문연구원_특일 정보/: .env.sample  korean_business_days.py  scratch.ipynb
api/github/20231216/: scratch.ipynb
api/imweb/: auth.js  auth.py
api/naver/datalab/: search.ipynb
api/naver/search-ad/: rel-kwd-stat.ipynb
api/naver/smartstore/: auth.js  auth.py
crawling/2024/20240123/: scratch.ipynb
data-processing/2023/20231023/: processing.ipynb
data-processing/2023/20231206/: scratch.ipynb
data-processing/20231025/: scratch.ipynb
data-processing/20231031/: scratch.ipynb
data-processing/20231102/: scratch.ipynb
data-processing/20231122/: scratch.ipynb
data-processing/20231123/: scratch.ipynb
data-processing/20231124/: scratch.ipynb
data-processing/20231201/: scratch.ipynb
data-processing/20231204/: scratch_20231204.ipynb
data-processing/20231213/: scratch.ipynb
data-processing/20231218/: scratch.ipynb
data-processing/20231227/: scratch.ipynb
data-processing/2024/20240109/: scratch.ipynb
data-processing/2024/202411/20241119/: pyproject.toml
data-processing/2024/202411/20241119/src/: scratch.ipynb
dependency_injector/application-multiple-containers/: pyproject.toml
dependency_injector/application-multiple-containers/app/: __main__.py  containers.py  services.py
dependency_injector/application-single-container/: pyproject.toml
dependency_injector/application-single-container/app/: __main__.py  services.py
docker/apache-nifi/: docker-compose.yaml
docker/install/: docker-install.sh
draw/20231110/: 20231110 Opensea 컬랙션 데이터 수집.drawio  20231110 Opensea 컬랙션 카테고리 수집.drawio
fastapi/fastapi-promethous-grafana/: docker-compose.yml
fastapi/fastapi-promethous-grafana/src/: Dockerfile  pyproject.toml
fastapi/fastapi-promethous-grafana/src/app/: db.py  main.py
fastapi/fastapi-promethous-grafana/src/app/note/: crud.py  models.py  router.py
infrastructure/aws-secret-manager/: update-secret.sh
languages/python/librarys/sqlalchemy/oracle-connector/: pyproject.toml
languages/rust/: install.sh
librarys/app-store-scraper/: scratch.ipynb
librarys/ntscraper/: custom_ntscraper.py  requirements.txt  scratch.ipynb
librarys/prefect/: github_stars.py
librarys/streamlit/: 20231206.py
librarys/twint/: README.md  requirements.txt  scratch.ipynb  scratch.py
librarys/web3/: abi.py  abi_test.ipynb  scratch.ipynb  scratch.py
machine-learning/hugging-face/open-source-ai-cookbook/: pyproject.toml
machine-learning/hugging-face/open-source-ai-cookbook/ko/: advenced-rag-korean.ipynb
machine-learning/hugging-face/open-source-ai-cookbook/tutorials/: advenced-rag-korean.ipynb  peft-quicktour.ipynb  tutorialsmlflow_ray_serve.ipynb
snowsql/slack-webhook/: baseline.sql
(+299 files in other folders)
