[tool.poetry]
name = "application-multiple-containers"
version = "0.1.0"
description = ""
authors = ["Seunggwan Song <yanhis97531@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"
boto3 = "^1.28.62"
mypy-boto3-s3 = "^1.28.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
