[tool.poetry]
name = "mysql-connector"
version = "0.1.0"
description = ""
authors = ["Seunggwan Song <yanhis97531@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
polars = "^1.14.0"
pymysql = "^1.1.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
